Added import of 'paper-item'.

--- a/paper-elements.html
+++ b/paper-elements.html
@@ -33,3 +33,4 @@ See `bower.json` for the complete list of components.
 <link rel="import" href="../paper-tabs/paper-tabs.html">
 <link rel="import" href="../paper-toast/paper-toast.html">
 <link rel="import" href="../paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="../paper-item/paper-item.html">
